--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 			<div class="row centered">
 				<div class="col-lg-12">
 					<!-- EDIT: name -->
-					<h1>Your Name</h1>
+					<h1>SANDEEP TONDALA</h1>
 					<!-- EDIT: title | email -->
-					<h3>Web Designer | <a href="mailto:YOU@EMAIL.com" target="_blank">YOU@EMAIL.com</a></h3>
+					<h3>Sr.Cloud/DevOps Engineer | <a href="mailto:t.sandeep1705@gmail.com" target="_blank">t.sandeep1705@gmail.com</a></h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -59,11 +59,11 @@
 				</div>
 				<div class="col-lg-6">
 					<!-- EDIT: about -->
-					<p>This is a short description of who you are. Keep it to about 3 sentences and make sure to highlight the key points about you. What makes you stand out as an applicant?</p>
+					<p>With a career spanning around 7 years, Sandeep has with software development teams to streamline their delivery practices.  He has deep technical knowledge of transformation methodologies and tools.  He has worked with a breadth of organizations to assess their strengths and weaknesses, understand their business objectives, and to achieve a challenging and responsible position to use his skills and knowledge that offer professional growth while being resourceful, innovative and flexible with great communication skills, motivated, capable of handling multiple tasks and interested in learning and implementing new technology and capable of learning various scripting languages.</p>
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
-					<p><a href="my-resume.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
+					<p><a href="SANDEEP TONDALA.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
@@ -81,26 +81,25 @@
 				</div>
 				<!-- EDIT: education line 1 -->
 				<div class="col-lg-6">
-					<p><t>Bachelor of Awesomeness</t><br/>
-						University of Maryland
+					<p><t>Master of Science</t><br/>
+						Texas A&M University-Kingsville
 						<!--<br/><i>Extra info here</i>-->
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>Expected SPRING 2015</sm><br/>
-					<imp><sm>IN PROGRESS</sm></imp>
+					<p><sm>2017</sm><br/>
 					</p>
 				</div>
 	
 				<!-- EDIT: education line 2 -->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p><t>Associate of Degrees </t><br/>
-						 Lil 'ol College
+					<p><t>Bachelor of Engineering </t><br/>
+						 JNTUH
 						<!--<br/><i>Extra info here</i>-->
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>JUNE 2012</sm></p>
+					<p><sm>2012</sm></p>
 				</div>
 	
 		</div><!--/.row -->
@@ -117,59 +116,61 @@
 				</div>
 				<!-- EDIT: work line 1 -->
 				<div class="col-lg-6">
-					<p class="tight"><t>Position </t><br/>
-						Thatone Corp. <br/>
+					<p class="tight"><t>Sr. DevOps Engineer </t><br/>
+						Mastercard <br/>
 					</p>
-					<p><more>Here's where you put a description of the position you held. Responsibilities, accomplishments - the same as you would do on a standard paper resume, but this will be online and look cooler.</more></p>
+					<p><more>I was DevOps engineer focused on uplifting Cloudbees Jenkins and chef for the enterprise, I worked to scale Jenkins platform by configuring different servers like AIX, Windows, and Linux. Created and used  Shared libraries so that it can be applied easily to all the services and users, automated every build tool installation and configuration process with chef across all Jenkins slaves and masters’ s configuration of middleware tools, enhanced Jenkins platform and stabilized according to Cloudbees standard documentation and suggestions, wrote validations scripts for Jenkins slave and master configuration using different scripting languages. Automated Windows converge process and also automated several processes like backups, cleaner scripts monitoring across the platform. I was responsible for maintaining large Jenkins Infrastructure using Operation Center (OC) by creating cluster operation jobs to maintain Masters connected to it.</more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>AUGUST 2012 - CURRENT <br />
-					CITY, STATE, COUNTRY</sm></p>
+					<p><sm>September 2018 - June 2012 <br />
+					O'Fallon, MO, USA</sm></p>
 				</div>
 				
 				<!-- EDIT: work line 2-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>Previous Position</t><br/>
-						Another Organization Ltd. <br/>
+					<p class="tight"><t>Sr. Cloud/DevOps Engineer</t><br/>
+						SAP LABS <br/>
 					</p>
-					<p><more>You worked at another job! Great! Describe what you did there, include those responsibilities and accomplishments again.</more></p>
+					<p><more>As an administrator on Microsoft Azure and part of the DevOps team for internal projects automation and build configuration management. Involved in configuring virtual machines, storage accounts, and resource groups. I was responsible for setting up CI/CD for Azure deployments using Jenkins. I designed and implemented Azure Cloud Infrastructure utilizing ARM templates Created users and groups using IAM and assigned individual policies to each group. Worked with many teams to perform load testing on the Applications using the VSTS. Responsible to scale platform according to requirements by deploying Azure VMs and cloud services into secure VNets and subnets. Also involved in migrating on-premise cloud storage to windows Azure using Azure Site Recovery and Azure backups.</more></p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>JUNE 2010 - JULY 2012 <br />
-					GOTHAM CITY, USA</sm></p>
+					<p><sm>April 2017 - August 2018 <br />
+					Palo Alto, CA, USA</sm></p>
 				</div>
+
+				<!-- EDIT: work line 2-->
+				<div class="col-lg-6 col-lg-offset-3">
+					<p class="tight"><t>Sr. Cloud/Devops Engineer</t><br/>
+						Thermo Fischer Scientific <br/>
+					</p>
+					<p><more>I managed cloud services using AWS CloudFormation, which helped developers and businesses an easy way to create a collection of, related AWS resources and provision them in an orderly and predictable fashion. I migrated the current Linux environment to AWS/RHEL Linux environment and used the auto-scaling feature. Involved in Remediation and patching of Unix/Linux Servers. I wrote Python scripts to automate different AWS services. I also worked on an assortment of Cloud and DevOps tools that achieve Key Performance Indicators, coordinating with the implementation team to build and engineer services for Linux and Windows OS on AWS.</more></p>
+				</div>
+				<div class="col-lg-3">
+					<p><sm>JUNE 2016 - APRIL 2017 <br />
+					Pittsburgh, PA, USA</sm></p>
+				</div>
+
 		</div><!--/.row -->
 		<br>
 		<hr>
 	</div><!--/.container -->
 
 
-	<!-- AWARDS SECTION -->
+	<!-- CERTIFICATION SECTION -->
 	<div class="container desc">
 		<div class="row">
 				<div class="col-lg-2 col-lg-offset-1">
-					<h5>AWARDS</h5>
+					<h5>CERTIFICATIONS</h5>
 				</div>
 
 				<!-- EDIT: awards line 1-->
 				<div class="col-lg-6">
-					<p><t>Best Smile Award</t><br/>
-						Award-giving organization<br/>
+					<p><t>AZ-400 Azure DevOps Engineer</t><br/>
+						Microsoft <br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
-					<p><sm>NOVEMBER 2013</sm></p>
-				</div>
-	
-				<!-- EDIT: awards line 2-->
-				<div class="col-lg-6 col-lg-offset-3">
-					<p class="tight"><t>Another award</t><br/>
-						Awards Site
-					</p>
-					<p><more>This award has a description. You won it eating pie. Or probably doing something more job-related. Maybe you won't even keep this section - you'll replace it with Skills or something else!</more></p>
-				</div>
-				<div class="col-lg-3">
-					<p><sm>2013</sm></p>
+					<p><sm>JULY 2020</sm></p>
 				</div>
 		
 		</div><!--/.row -->
@@ -189,28 +190,27 @@
 				<!-- EDIT: email -->
 				<div class="col-lg-6">
 					<p><t>Email</t><br/>
-						<a href="mailto:YOUR@EMAIL.com" target="_blank" class="mail">YOUR@EMAIL.com</a> <br/>
+						<a href="mailto:t.sandeep1705@gmail.com" target="_blank" class="mail">t.sandeep1705@gmail.com</a> <br/>
 					</p>
 					<!-- EDIT: address -->
 					<p><t>Address</t><br/>
-						123 Some St. <br/>
-						City, State 01234 <br/>
+						1327 Savannah Cir. <br/>
+						O'Fallon, Missouri 63368 <br/>
 						United States of America<br/>
 					</p>
 					<!-- EDIT: phone number -->
 					<p><t>Phone</t><br/>
-						<a href="tel:2345678901" class="tel">(234) 567-8901</a> <br/>
+						<a href="tel:5304449147" class="tel">(530) 444-9147</a> <br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>SOCIAL LINKS</sm></p>
 					<p>
 						<!-- EDIT: Social Links. Replace # with your URL for each -->
-						<a href="#" target="_blank"><i class="icon-dribbble"></i></a>
-						<a href="#" target="_blank"><i class="icon-twitter"></i></a>
-						<a href="#" target="_blank"><i class="icon-facebook"></i></a>
-						<a href="#" target="_blank"><i class="icon-linkedin"></i></a>
-						<!--<a href="#" target="_blank"><i class="icon-github"></i></a>-->
+						<a href="@SandeepTondala" target="_blank"><i class="icon-twitter"></i></a>
+						<a href="https://www.facebook.com/sandeep.darling.581730" target="_blank"><i class="icon-facebook"></i></a>
+						<a href="http://linkedin.com/in/sandeep-t-9a4586165" target="_blank"><i class="icon-linkedin"></i></a>
+						<!--<a href="https://github.com/Sandeep1705-DevOps" target="_blank"><i class="icon-github"></i></a>-->
 					</p>
 				</div>
 			</div><!--/.row -->
